[package]
name = "raft-rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/QuakeWang/raft-rust"
keywords = ["Raft", "Distributed-System"]

[dependencies]
prost = "0.12.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.7"

[build-dependencies]
tonic-build = "0.7.0"
